resolved text-align issue for question prompts - now placed in center

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,6 +61,11 @@ button:active {
     color: grey;
     font-style: italic;
 }
+#section{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
 
 input[type=text]{
     border: none;
